Closed Bug 1303982 Opened 8 years ago Closed 8 years ago

CarrySet and CarryClear are missing on non-JIT platform

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- fixed
firefox52 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

Bug 1298202 forget some condition defines for non-JIT plaform...
Attachment #8792856 - Flags: review?(luke)
Comment on attachment 8792856 [details] [diff] [review] Bug 1303982 - Define CarrySet and CarryClear for non-JIT platform. r?luke Review of attachment 8792856 [details] [diff] [review]: ----------------------------------------------------------------- Trivial patch, stealing. Thanks for fixing this!
Attachment #8792856 - Flags: review?(luke) → review+
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/mozilla-inbound/rev/6cf80319f8fd Define CarrySet and CarryClear for non-JIT platform. r=bbouvier
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Comment on attachment 8792856 [details] [diff] [review] Bug 1303982 - Define CarrySet and CarryClear for non-JIT platform. r?luke Approval Request Comment [Feature/regressing bug #]: Regression from bug 1298202 [User impact if declined]: Tier-3 build failure [Describe test coverage new/current, TreeHerder]: Build spidermonkey with --disable-ion. [Risks and why]: NPOTB [String/UUID change made/needed]: None
Attachment #8792856 - Flags: approval-mozilla-beta?
Comment on attachment 8792856 [details] [diff] [review] Bug 1303982 - Define CarrySet and CarryClear for non-JIT platform. r?luke Take this patch to fix Tier-3 build failure. Beta51+. Should be in 51 beta 3.
Attachment #8792856 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: