Bug 1303982 - Define CarrySet and CarryClear for non-JIT platform. r=bbouvier, a=gchang

MozReview-Commit-ID: 7VarACNjdIx